# SpaceX_ML_DS

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  notebooks.dvc  pyproject.toml
.Trash-197609/files/: Untitled.ipynb
.Trash-197609/info/: Untitled.ipynb.trashinfo
.dvc/: config
.envs/: .mlflow-dev  .mlflow-prod
docker/: Dockerfile
docker/scripts/: start-tracking-server.sh  startup-script.sh
outputs/2024-09-14/02-40-52/.hydra/: config.yaml  hydra.yaml
src/: NLP_process_data.py  __init__.py  generate_final_config.py  main.py  prepare_data.py  process_data.py  version_data.py
src/config_schemas/: config_schema.py
src/config_schemas/dask_cluster/: dask_cluster_config_schema.py
src/config_schemas/data_processing/: data_processing_config_schema.py  dataset_cleaners_config_schema.py  dataset_readers_config_schema.py
src/config_schemas/data_processing/dask_cluster/: dask_cluster_config_schema.py
src/config_schemas/infrastructure/: gcp_config_schema.py
src/config_schemas/tokenization/: decoder_config_schema.py  model_config_schema.py  normalizer_config_schema.py  post_processor_config_schema.py  pre_tokenizer_config_schema.py  tokenizer_config_schema.py  tokenizer_training_config_schema.py  train_tokenizer_config_schema.py  trainer_config_schema.py
src/configs/: config.yaml
src/configs/auto_generated/: config.pickle  config.yaml  data_processing_config.pickle  data_processing_config.yaml  tokenizer_training_config.pickle  tokenizer_training_config.yaml
src/configs/dask_cluster/: local_dask_cluster.yaml
src/configs/data_processing/: data_processing_config.yaml
src/configs/data_processing/dask_cluster/: gcp_dask_cluster.yaml
src/configs/data_processing/dataset_cleaner_manager/: dataset_cleaner_manager.yaml
src/configs/dataset_cleaner_manager/: dataset_cleaner_manager.yaml
src/configs/dataset_cleaner_manager/dataset_cleaners/: example_cleaner.yaml
src/configs/dataset_reader_manager/: dataset_reader_manager.yaml
src/configs/dataset_reader_manager/dataset_readers/: x.yaml
src/configs/dataset_reader_manager/dataset_readers/x/: x.yaml
src/configs/infrastructure/: GCP_config.yaml
src/configs/running_mode/: local.yaml  n1_standard_1.yaml
src/configs/tokenization/: decoder_config.yaml  post_processors.yaml  pre_tokenizer_config.yaml  tokenizer_config.yaml  tokenizer_training_config.yaml  trainer_config.yaml
src/configs/tokenizer_training/: tokenizer_training_config.yaml
src/configs/tokenizer_training/tokenizer/: bpe_tokenizer_config.yaml
src/data_processing/: NLP_process_data.py  dataset_reader.py  process_data.py  version_data.py
src/tokenization/: tokenizer.py  train_tokenizer.py
src/utils/: NLP_utils.py  config_utils.py  data_utils.py  gcp_utils.py  io_utils.py  mlflow_utils.py  schema_utils.py  utils.py
